--- a/profalini-main/contato.html
+++ b/profalini-main/contato.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProfAlini</title>
     <style>
-        body { font-family: Calibri; }
+        body { font-family: Cambria; }
     </style>
 </head>
 
