--- a/profalini-main/disciplinas.html
+++ b/profalini-main/disciplinas.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
     <style>
-        body { font-family: Calibri; }
+        body { font-family: Cambria; }
     </style>
 </head>
 <body>
     <h1>Disciplinas Ministradas</h1>
+    <figure>
+        <img src="Imagens/portrait-funny-curious-cat-scottish-600nw-2152074937.webp" alt="Gato" height="150" width="200">
+    </figure>
+
     <nav>
         <a href="index.html">Home</a> ||
         <a href="musica.html">Músicas para estudar </a> || 
@@ -17,6 +21,8 @@
         <a href="video.html">Vídeos sobre programação</a> ||
         <a href="disciplinas.html">Disciplinas ministradas</a>
     </nav>  
+
+
     <main>
         <p>Conheça as disciplinas que ministro e como elas podem ajudar no seu desenvolvimento acadêmico e profissional.</p>
         <div>
