--- a/profalini-main/index.html
+++ b/profalini-main/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProfAlini</title>
     <style>
-        body { font-family: Calibri; }
+        body { font-family: Cambria; }
     </style>
 </head>
 
 <body>
-    <h1>ProfAlini - exemplo hospedado no servidor do GitHub</h1>
+    <h1>ProfAlini - Exemplo hospedado no servidor do GitHub</h1>
     <figure>
         <img src="Imagens/sleeping-red-cat-white-background-133955521.jpg" alt="Gato" title="  Prof. Alini (Programação) " height="150" width="200">
         <figcaption> Prof. Alini (Programação)</figcaption>
@@ -25,17 +25,20 @@
     </nav>
 
     <main>
-        <p>
-            Este exemplo será utilziado na atividade com o GitHub, será um  projeto vinculado ao GitHub. Observe que está incompleto, faltam     imagens etc, devemos ainda completar as restatantes páginas     solicitadas e personalizar os conteúdos mostrados com outros    assuntos. Na página contato.html terá um formulário simples.
-        </p>
 
         <p>
-            Aqui você encontrará recursos para estudar, vídeos sobre    programação e informações sobre as disciplinas que ministro. 
+            Aqui você encontrará recursos para estudar, vídeos sobre programação e informações sobre as disciplinas. 
         </p>
 
         <p>
             Sinta-se à vontade para entrar em contato!
         </p>
+
+        <p>
+            Este exemplo será utiliziado na atividade com o GitHub, é um  projeto vinculado ao GitHub. Observe que está incompleto, futuramente será finalizado e personalizado.<br>
+             Na página contato.html terá um formulário simples.
+        </p>
+
     </main>
     
         
