--- a/profalini-main/video.html
+++ b/profalini-main/video.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vídeos</title>
     <style>
-        body { font-family: Calibri; }
+        body { font-family: Cambria; }
     </style>
 </head>
 <body>
@@ -24,7 +24,7 @@
     <main>
         <p>
             Aprenda programação de forma prática e divertida! Aqui estão alguns vídeos que preparei para ajudar você a entender os conceitos básicos e avançados.
-        </p></br>
+        </p>
 
         <h3>Lista de Vídeos:</h3>
         <ul>
