--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <p>
             Este exemplo será utiliziado na atividade com o GitHub, é um  projeto vinculado ao GitHub. Observe que está incompleto, futuramente será finalizado e personalizado.<br>
-             Na página contato.html terá um formulário simples.
+             Na página "Entre em contato" terá um formulário simples.
         </p>
 
     </main>
