--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProfAlini</title>
     <style>
-        body { font-family: Cambria; }
+        body { font-family: Cambria; 
+            
+        }
+        
+        .conteudo {
+            margin: 0px 50px ;
+        }
     </style>
 </head>
 
@@ -24,7 +30,7 @@
         <a href="disciplinas.html">Disciplinas ministradas</a>
     </nav>
 
-    <main>
+    <main class="conteudo">
 
         <p>
             Aqui você encontrará recursos para estudar, vídeos sobre programação e informações sobre as disciplinas. 
