--- a/contato.html
+++ b/contato.html
@@ -6,6 +6,10 @@
     <title>ProfAlini</title>
     <style>
         body { font-family: Cambria; }
+      
+        .conteudo {
+            text-align: center ;
+        }
     </style>
 </head>
 
@@ -28,7 +32,7 @@
         Se você tiver dúvidas, sugestões ou quiser mais informações, preencha o formulário abaixo e entrarei em contato o mais breve possível.
     </p>
     
-    <form>
+    <form class="conteudo">
         <label for="email">Informe seu e-mail</label><br>
         <input type="email" id="email" name="user_email"><br><br>
 
@@ -36,7 +40,7 @@
         <input type="text" id="name" name="nome"><br><br>
 
         <label for="number">Seu telefone</label><br>
-        <input type="tel" id="number" name="telefone"><br><br>
+        <input type="tel" id="number" name="telefone" class="input-padrao" required placeholder="(xx) xxxxx-xxxx"><br><br>
 
         <label for="comment">Mensagem:</label><br>
         <textarea id="comment" name="comentario" rows="10" cols="20"></textarea><br><br>
